# projetsalledesport

./: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  coach.c  coach.h  coach.txt  cours.txt  disponibilite.txt  equipement.c  equipement.h  interface.c  interface.c.bak  main.c  materiel.txt  project1  projet1  salles.txt  suppressions_log.txt  test
Gestion_equipements/: config.h  config.status  configure.in  project4.glade  project4.gladep.bak
centre/: config.status  maram.glade
chat_coach/: project7.glade
cours/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  cours.c  cours.h  cours.txt  gym_app  images.gtk  main.c  nouveau_cours.glade  nouveau_cours.gladep  users.txt
cours/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  cours.c  cours.h  cours.txt  interface.c  interface.c.bak  interface.h  main.c  projet_6
cours/src/.deps/: callbacks.Po  cours.Po
event/: Makefile  Makefile.am  Makefile.in  interface.c  wlh-hedha-finale(aziz).glade
maram/: Makefile  maram.glade
project1/: Makefile  (+4 more)
project1/src/: Makefile  Makefile.am  Makefile.in  api_client.c  api_client.h  callbacks.c  callbacks.h  coach.c  coach.h  coach.txt  cours.txt  disponibilite.txt  interface.c  interface.c.bak  project1  suppressions_log.txt
projetbuild/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  equipements.txt  interface.c  interface.c.bak  interface.h.bak  main.c  programme  reservations.txt
projetbuild/src/pixmaps/: materiels-et-accessoires-de-sport.gtk  statistiques-avancees-sport.gtk
(+135 files in other folders)
